regenerated
git-svn-id: svn+ssh://src.earth.threerings.net/narya/trunk@6197 542714f4-19e9-0310-aa3c-eee0fc999fb1